Fix routing manager not always being aware of offline mode on Maemo.

The routing manager was informed about offline mode indirectly through
the routing widget. The latter is created lazily on Maemo, so the
routing manager was not aware of offline mode if it was enabled before
opening the routing widget for the first time.
BUG: 270043