src/lib/MarbleControlBox.cpp
@@ -226,6 +226,7 @@ void MarbleControlBox::setWorkOffline(bool offline)
         d->m_widget->model()->downloadManager();
     downloadManager->setDownloadEnabled( !offline );
     d->m_navigationWidget->setWorkOffline( offline );
+    d->m_widget->model()->routingManager()->setWorkOffline( offline );
     if ( d->m_routingWidget ) {
         d->m_routingWidget->setWorkOffline( offline );
     }
